--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "bootstrap-icons": "^1.10.5",
     "moment": "^2.29.4",
     "moment-date-format": "^1.0.1",
     "moment-timezone": "^0.5.43",
